[gd_scene load_steps=28 format=3 uid="uid://dhdbxqqbo8gxi"]

[ext_resource type="Script" path="res://Scripts/Entities/jolt_car.gd" id="1_v325y"]
[ext_resource type="Script" path="res://Scripts/Entities/wheel.gd" id="2_0xgju"]
[ext_resource type="Texture2D" uid="uid://ccgta3050isxh" path="res://Assets/Textures/Grid/Light/texture_06.png" id="2_wku7g"]
[ext_resource type="Script" path="res://Scripts/Entities/CameraController.gd" id="3_hjqr5"]
[ext_resource type="TorusMesh" uid="uid://6a6ai35c38c7" path="res://Assets/Meshs/Car/Parts/Wheels/torus.tres" id="4_68e7a"]
[ext_resource type="Script" path="res://Scripts/Entities/actionnable_car.gd" id="4_uphqk"]
[ext_resource type="PackedScene" uid="uid://dea0kmuerk3wf" path="res://Scenes/Ui/battery_bar.tscn" id="5_0x0d3"]
[ext_resource type="SphereMesh" uid="uid://cxlnq5pga15di" path="res://Assets/Meshs/Car/Parts/Wheels/sphere.tres" id="5_jmh46"]
[ext_resource type="PackedScene" uid="uid://tidejc3nmf5j" path="res://Scenes/Ui/radio.tscn" id="6_ff0wm"]
[ext_resource type="CapsuleMesh" uid="uid://c0n2b2pknaexi" path="res://Assets/Meshs/Car/Parts/Springs/capsule.tres" id="6_iuk4m"]
[ext_resource type="CylinderMesh" uid="uid://u8w3ruvqktcb" path="res://Assets/Meshs/Car/Parts/Wheels/cylinder.tres" id="6_ml41d"]
[ext_resource type="BoxMesh" uid="uid://dcja85y8y0i6g" path="res://Assets/Meshs/Car/Parts/Springs/square.tres" id="7_1mpdo"]
[ext_resource type="AudioStream" uid="uid://cijx6n856d2yy" path="res://Assets/Audios/Musics/International_love.mp3" id="7_q0kix"]
[ext_resource type="ArrayMesh" uid="uid://kmav3dhldjo4" path="res://Assets/Meshs/Car/Parts/Springs/coil.tres" id="7_wtmty"]

[sub_resource type="BoxShape3D" id="BoxShape3D_g4php"]
size = Vector3(3.78675, 0.950195, 3.41965)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_sakff"]
albedo_texture = ExtResource("2_wku7g")
uv1_scale = Vector3(-0.245, -0.245, -0.245)
uv1_triplanar = true

[sub_resource type="BoxMesh" id="BoxMesh_tphuy"]
material = SubResource("StandardMaterial3D_sakff")
size = Vector3(2, 0.5, 3)

[sub_resource type="CylinderMesh" id="CylinderMesh_ww5ne"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_4hkpc"]
resource_local_to_scene = true
emission = Color(1, 0, 0, 1)
emission_energy_multiplier = 16.0

[sub_resource type="PrismMesh" id="PrismMesh_wyplg"]
resource_local_to_scene = true
material = SubResource("StandardMaterial3D_4hkpc")
size = Vector3(0.9, 1, 1)

[sub_resource type="SphereShape3D" id="SphereShape3D_ne7co"]
radius = 0.025

[sub_resource type="BoxShape3D" id="BoxShape3D_5a73s"]
size = Vector3(6.22852, 3.52063, 4)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ch1p8"]
bg_color = Color(0, 0, 0, 0)

[sub_resource type="Gradient" id="Gradient_mbdqv"]
colors = PackedColorArray(0.372549, 0.866667, 0.403922, 1, 0.407843, 0.956863, 0.701961, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_40wrh"]
gradient = SubResource("Gradient_mbdqv")
width = 100
height = 20
fill_from = Vector2(0, 0.5)
fill_to = Vector2(1, 0.5)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_546eb"]
content_margin_left = 5.0
content_margin_top = 5.0
content_margin_right = 5.0
content_margin_bottom = 5.0
texture = SubResource("GradientTexture2D_40wrh")

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_afsww"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath(".:rotation")
properties/1/spawn = true
properties/1/replication_mode = 1
properties/2/path = NodePath(".:steering_angle")
properties/2/spawn = true
properties/2/replication_mode = 1
properties/3/path = NodePath(".:current_wheel_angle")
properties/3/spawn = true
properties/3/replication_mode = 1
properties/4/path = NodePath("CollisionShape3D:position")
properties/4/spawn = true
properties/4/replication_mode = 1
properties/5/path = NodePath("CollisionShape3D:rotation")
properties/5/spawn = true
properties/5/replication_mode = 1
properties/6/path = NodePath("CollisionShape3D:scale")
properties/6/spawn = true
properties/6/replication_mode = 1
properties/7/path = NodePath("MeshInstance3D:position")
properties/7/spawn = true
properties/7/replication_mode = 1
properties/8/path = NodePath("MeshInstance3D:rotation")
properties/8/spawn = true
properties/8/replication_mode = 1
properties/9/path = NodePath(".:radio_on")
properties/9/spawn = true
properties/9/replication_mode = 1
properties/10/path = NodePath(".:current_playback_position")
properties/10/spawn = true
properties/10/replication_mode = 1
properties/11/path = NodePath("AudioStreamPlayer3D:playing")
properties/11/spawn = true
properties/11/replication_mode = 0
properties/12/path = NodePath("AudioStreamPlayer:playing")
properties/12/spawn = true
properties/12/replication_mode = 0
properties/13/path = NodePath("HeadLight/LeftHeadLight:visible")
properties/13/spawn = true
properties/13/replication_mode = 1
properties/14/path = NodePath("HeadLight/RightHeadLight:visible")
properties/14/spawn = true
properties/14/replication_mode = 1

[node name="JoltCar" type="RigidBody3D" groups=["JoltCar", "Persist"]]
mass = 10.0
center_of_mass_mode = 1
center_of_mass = Vector3(0, -0.95, -0.12)
script = ExtResource("1_v325y")
spring_strength = 500.0
spring_force = 50.0
wheel_radius = 0.5
engine_power = 70.0
front_tire_grip = 1.0
rear_tire_grip = 1.0
parking_brake_force = 100.0
battery_drain_rate = 1.0
wheel_meshs = Array[Mesh]([ExtResource("4_68e7a"), ExtResource("5_jmh46"), ExtResource("6_ml41d")])
spring_meshs = Array[Mesh]([ExtResource("7_wtmty"), ExtResource("6_iuk4m"), ExtResource("7_1mpdo")])

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00164413, -0.025, -0.00308533)
shape = SubResource("BoxShape3D_g4php")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(0.999999, 0, 0, 0, 1, 0, 0, 0, 0.999999, 0, 0.2, 0)
mesh = SubResource("BoxMesh_tphuy")

[node name="Wheels" type="Node3D" parent="."]

[node name="FrontLeftWheel" type="RayCast3D" parent="Wheels"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.7, 0, -1.2)
script = ExtResource("2_0xgju")
is_front_wheel = true

[node name="Spring" type="Node3D" parent="Wheels/FrontLeftWheel"]

[node name="Mesh" type="MeshInstance3D" parent="Wheels/FrontLeftWheel/Spring"]
transform = Transform3D(0.035, 0, 0, 0, 0.035, 0, 0, 0, 0.035, 0.5, 0, 0)
mesh = ExtResource("7_wtmty")
skeleton = NodePath("")

[node name="Wheel" type="Node3D" parent="Wheels/FrontLeftWheel"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 0, 0)

[node name="Mesh" type="MeshInstance3D" parent="Wheels/FrontLeftWheel/Wheel"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, -0.5, 0, 0)
mesh = ExtResource("4_68e7a")
skeleton = NodePath("../..")

[node name="FrontRightWheel" type="RayCast3D" parent="Wheels"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.7, 0, -1.2)
script = ExtResource("2_0xgju")
is_front_wheel = true

[node name="Spring" type="Node3D" parent="Wheels/FrontRightWheel"]

[node name="Mesh" type="MeshInstance3D" parent="Wheels/FrontRightWheel/Spring"]
transform = Transform3D(0.035, 0, 0, 0, 0.035, 0, 0, 0, 0.035, -0.5, 0, 0)
mesh = ExtResource("7_wtmty")
skeleton = NodePath("")

[node name="Wheel" type="Node3D" parent="Wheels/FrontRightWheel"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 0, 0)

[node name="Mesh" type="MeshInstance3D" parent="Wheels/FrontRightWheel/Wheel"]
transform = Transform3D(-4.37114e-08, -0.999999, 0, 1, -4.37113e-08, 0, 0, 0, 0.999999, 0.5, 0, 0)
mesh = ExtResource("4_68e7a")
skeleton = NodePath("../..")

[node name="BackRightWheel" type="RayCast3D" parent="Wheels"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.7, 0, 1.1918)
script = ExtResource("2_0xgju")

[node name="Spring" type="Node3D" parent="Wheels/BackRightWheel"]

[node name="Mesh" type="MeshInstance3D" parent="Wheels/BackRightWheel/Spring"]
transform = Transform3D(0.035, 0, 0, 0, 0.035, 0, 0, 0, 0.035, -0.5, 0, 0)
mesh = ExtResource("7_wtmty")
skeleton = NodePath("")

[node name="Wheel" type="Node3D" parent="Wheels/BackRightWheel"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 0, 0)

[node name="Mesh" type="MeshInstance3D" parent="Wheels/BackRightWheel/Wheel"]
transform = Transform3D(-4.37114e-08, -0.999999, 0, 1, -4.37113e-08, 0, 0, 0, 0.999999, 0.5, 0, 0)
mesh = ExtResource("4_68e7a")
skeleton = NodePath("../..")

[node name="BackLeftWheel" type="RayCast3D" parent="Wheels"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.7, 0, 1.2)
script = ExtResource("2_0xgju")

[node name="Spring" type="Node3D" parent="Wheels/BackLeftWheel"]

[node name="Mesh" type="MeshInstance3D" parent="Wheels/BackLeftWheel/Spring"]
transform = Transform3D(0.035, 0, 0, 0, 0.035, 0, 0, 0, 0.035, 0.5, 0, 0)
mesh = ExtResource("7_wtmty")
skeleton = NodePath("")

[node name="Wheel" type="Node3D" parent="Wheels/BackLeftWheel"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 0, 0)

[node name="Mesh" type="MeshInstance3D" parent="Wheels/BackLeftWheel/Wheel"]
transform = Transform3D(-4.37114e-08, -0.999999, 0, 1, -4.37113e-08, 0, 0, 0, 0.999999, -0.5, 0, 0)
mesh = ExtResource("4_68e7a")
skeleton = NodePath("../..")

[node name="HeadLight" type="Node3D" parent="."]

[node name="LeftHeadLight" type="SpotLight3D" parent="HeadLight"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.4, 0.4, -1.77028)
visible = false
light_energy = 2.0
shadow_enabled = true
spot_range = 20.0

[node name="RightHeadLight" type="SpotLight3D" parent="HeadLight"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.4, 0.4, -1.77028)
visible = false
light_energy = 2.0
shadow_enabled = true
spot_range = 20.0

[node name="MeshInstance3D" type="MeshInstance3D" parent="HeadLight"]
transform = Transform3D(0.499691, -7.64885e-11, 0.017589, -0.017589, -4.3473e-09, 0.499691, 3.82443e-10, -0.1, -2.17365e-08, 0.396926, 0.394148, -1.49191)
mesh = SubResource("CylinderMesh_ww5ne")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="HeadLight"]
transform = Transform3D(0.499691, -7.64885e-11, 0.017589, -0.017589, -4.3473e-09, 0.499691, 3.82443e-10, -0.1, -2.17365e-08, -0.397, 0.394, -1.492)
mesh = SubResource("CylinderMesh_ww5ne")

[node name="TailLight" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.2, 3)

[node name="LeftTailLight" type="MeshInstance3D" parent="TailLight"]
transform = Transform3D(-1.1945e-09, -7.54979e-09, 0.5, 0.497407, -0.0101716, -2.65137e-09, 0.0508581, 0.0994814, 3.76747e-08, -0.55, 0.403975, -1.50318)
mesh = SubResource("PrismMesh_wyplg")

[node name="RightTailLight" type="MeshInstance3D" parent="TailLight"]
transform = Transform3D(-1.1945e-09, -7.54979e-09, 0.5, 0.497407, -0.0101716, -2.65137e-09, 0.0508581, 0.0994814, 3.76747e-08, 0.55, 0.403975, -1.50318)
mesh = SubResource("PrismMesh_wyplg")

[node name="CameraRoot" type="Node3D" parent="."]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 2, 0.0197153)
script = ExtResource("3_hjqr5")

[node name="CameraYaw" type="Node3D" parent="CameraRoot"]

[node name="CameraPitch" type="Node3D" parent="CameraRoot/CameraYaw"]

[node name="SpringArm3D" type="SpringArm3D" parent="CameraRoot/CameraYaw/CameraPitch"]
shape = SubResource("SphereShape3D_ne7co")
spring_length = 3.0

[node name="Camera3D" type="Camera3D" parent="CameraRoot/CameraYaw/CameraPitch/SpringArm3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 5.04965)

[node name="PlayerDetect" type="Area3D" parent="."]
collision_layer = 2
collision_mask = 2
script = ExtResource("4_uphqk")

[node name="CollisionShape3D" type="CollisionShape3D" parent="PlayerDetect"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.26031, -0.0879002)
shape = SubResource("BoxShape3D_5a73s")

[node name="SpeedText" type="CanvasLayer" parent="."]
visible = false

[node name="SpeedCounter" type="Label" parent="SpeedText"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -102.0
offset_top = -83.0
offset_right = -62.0
offset_bottom = -14.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 50
metadata/_edit_use_anchors_ = true

[node name="SpeedUnit" type="Label" parent="SpeedText"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -52.0
offset_top = -48.0
offset_right = -11.0
offset_bottom = -25.0
grow_horizontal = 0
grow_vertical = 0
text = "km/h"

[node name="BatteryText" type="CanvasLayer" parent="."]
visible = false

[node name="BatteryBar" parent="BatteryText" instance=ExtResource("5_0x0d3")]
anchors_preset = 3
anchor_left = 1.0
anchor_right = 1.0
offset_left = -262.0
offset_top = -118.0
offset_right = -12.0001
offset_bottom = -88.0
grow_horizontal = 0
theme_override_styles/background = SubResource("StyleBoxFlat_ch1p8")
theme_override_styles/fill = SubResource("StyleBoxTexture_546eb")

[node name="RadioText" type="CanvasLayer" parent="."]
visible = false

[node name="Radio" parent="RadioText" instance=ExtResource("6_ff0wm")]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -125.0
offset_top = -164.0
offset_right = -12.0
offset_bottom = -141.0
grow_horizontal = 0
grow_vertical = 0

[node name="Node3D" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.95, -0.21687)

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("7_q0kix")
volume_db = -20.0
bus = &"Music"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_q0kix")
volume_db = -10.0
bus = &"Music"

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_afsww")

[connection signal="body_entered" from="PlayerDetect" to="." method="_on_player_detect_body_entered"]
[connection signal="body_exited" from="PlayerDetect" to="." method="_on_player_detect_body_exited"]
